--- a/apps/app/src/app/account/account-nua/account-nua.component.html
+++ b/apps/app/src/app/account/account-nua/account-nua.component.html
@@ -1,68 +1,42 @@
 <div class="account-nua">
   <h2>{{ 'account.nua_keys' | translate }}</h2>
-  <div *ngIf="clients | async as clients">
+  <div class="warning">{{ 'stash.service_access_description' | translate }}</div>
+  <div *ngIf="clients | async as clients"
+       class="container">
+    <h3>{{ 'account.existing_keys' | translate }}</h3>
     <div class="client"
          *ngFor="let client of clients">
-      <div class="client-header"
-           fxLayout="row"
-           fxLayoutAlign="start center">
-        <div class="client-title"
-             fxFlex="1 1 0">
-          <button (click)="toggleClient(client.client_id)"
-                  fxLayout="row"
-                  fxLayoutAlign="start center"
-                  fxLayoutGap="4px">
-            <span>{{ client.title }}</span>
-            <svg-icon src="assets/icons/chevron-right.svg"
-                      class="client-title-arrow"
-                      [class.expanded]="isExpanded(client.client_id)"></svg-icon>
-          </button>
-        </div>
-        <div class="client-date"
-             fxFlex="0 0 auto">{{ client.created | formatDate }}</div>
-        <div class="client-actions"
-             fxFlex="0 0 auto"
-             fxLayout="row"
-             fxLayoutAlign="end center"
-             fxLayoutGap="5px">
-
-          <!-- TODO: Not sure what sistema icon should be used for generate_key action (key or refresh) -->
-          <app-button-action (click)="askConfirmation(client)"
-                             action="generate_key"
-                             ariaLabel="account.generate_key"
-                             stfTooltip
-                             stfTooltipText="account.generate_key">
-          </app-button-action>
-          <app-button-action *ngIf="isNuaActivityEnabled | async"
-                             (click)="goToActivity(client)"
-                             action="activity"
-                             ariaLabel="account.nua_key_activity"
-                             stfTooltip
-                             stfTooltipText="account.nua_key_activity">
-          </app-button-action>
-          <app-button-action (click)="deleteClient(client.client_id)"
-                             action="delete"
-                             ariaLabel="generic.delete"
-                             stfTooltip
-                             stfTooltipText="generic.delete">
-          </app-button-action>
-        </div>
+      <div class="title">
+        {{ client.title }}
       </div>
-      <stf-expander [expanded]="isExpanded(client.client_id)">
-        <stf-expander-content>
-          <div class="client-body">
-            <div class="client-email">{{ 'account.linked_email' | translate }}: <span>{{ client.contact }}</span></div>
-            <div *ngIf="client.description">{{ client.description }}</div>
-          </div>
-        </stf-expander-content>
-      </stf-expander>
-    </div>
-    <div>
-      <div class="mt-28">
-        <pa-button (click)="openDialog()">
-          {{ 'account.create_nua_key' | translate }}
+      <div class="date">{{ client.created | formatDate }}</div>
+      <div class="email">{{ client.contact }}</div>
+      <div class="buttons">
+        <pa-button *ngIf="isNuaActivityEnabled | async"
+                   (click)="goToActivity(client)"
+                   aspect="basic"
+                   icon="activity-log"
+                   size="small"
+                   paTooltip="account.nua_key_activity">
+        </pa-button>
+        <pa-button (click)="askConfirmation(client)"
+                   aspect="basic"
+                   icon="refresh"
+                   size="small"
+                   paTooltip="account.generate_key">
+        </pa-button>
+        <pa-button (click)="deleteClient(client.client_id)"
+                   aspect="basic"
+                   icon="trash"
+                   size="small"
+                   paTooltip="generic.delete">
         </pa-button>
       </div>
     </div>
+  </div>
+  <div class="add">
+    <pa-button (click)="openDialog()">
+      {{ 'account.create_nua_key' | translate }}
+    </pa-button>
   </div>
 </div>
