--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
@@ -19,27 +19,27 @@
         <pa-option *ngFor="let option of labelsets | async" [value]="option.value">{{ option.title }}</pa-option>
       </pa-select>
 
-      <p [class.warning]="!agreement">
-        {{ 'stash.settings.processes.training.time_requirement' | translate: { hours: hoursRequired } }}
-      </p>
+      <ng-container *ngIf="isBillingEnabled | async">
+        <p [class.warning]="!agreement">
+          {{ 'stash.settings.processes.training.time_requirement' | translate: { hours: hoursRequired } }}
+        </p>
 
-      <div class="agreement-container">
-        <stf-checkbox [(selected)]="agreement[type]" [disabled]="cannotTrain | async" color="dark">{{
-          'stash.settings.processes.training.agreement' | translate
-        }}</stf-checkbox>
-      </div>
+        <div class="agreement-container">
+          <pa-checkbox [disabled]="cannotTrain | async"
+                       [(value)]="agreement[type]">{{'stash.settings.processes.training.agreement' | translate}}</pa-checkbox>
+        </div>
+      </ng-container>
     </div>
+
     <div *ngIf="running[type]" class="active-training warning">
       {{ 'stash.settings.processes.training.active' | translate }}
     </div>
     <div class="cta-container">
-      <stf-button
-        minWidth="110px"
-        [color]="running[type] ? 'secondary' : 'primary'"
-        [disabled]="(!running[type] && !agreement[type]) || (cannotTrain | async)"
-        (click)="startOrStopTraining(type)"
-        >{{ 'stash.settings.processes.training.' + (running[type] ? 'stop' : 'start') | translate }}</stf-button
-      >
+      <pa-button [kind]="running[type] ? 'secondary' : 'primary'"
+                 [disabled]="(!running[type] && !agreement[type]) || (cannotTrain | async)"
+                 (click)="startOrStopTraining(type)">
+        {{ 'stash.settings.processes.training.' + (running[type] ? 'stop' : 'start') | translate }}
+      </pa-button>
     </div>
   </section>
 </div>
