--- a/apps/dashboard/src/app/components/hint/hint.component.scss
+++ b/apps/dashboard/src/app/components/hint/hint.component.scss
@@ -1,35 +1,27 @@
 @import 'variables';
+
 .hint {
-  background-color: var(--stf-gray-background);
-  padding: rythm(0.5);
-  ::ng-deep {
-    pre {
-      overflow: scroll;
-    }
-    a {
-      color: $gray-black;
-      font-weight: var(--stf-font-weight-semibold);
-    }
-    a:hover {
-      color: var(--stf-primary);
-    }
+  background-color: $color-neutral-lightest;
+  padding: 8px;
+  margin-bottom: 40px;
+
+  pre {
+    overflow: scroll;
+    font-size: font-size(xs);
+  }
+
+  &.inverted {
+    background-color: $color-light-stronger;
   }
 }
+
 .hint-title {
-  cursor: pointer;
   display: flex;
   align-items: center;
-  color: $gray-contrast;
-  svg-icon {
-    transition: transform 0.2s ease-in-out;
+  color: $color-neutral-strong;
+
+  pa-icon {
     display: inline-block;
     margin-right: rythm(0.5);
-
-    ::ng-deep svg {
-      stroke: $gray-contrast;
-      display: block;
-      width: rythm(1);
-      height: auto;
-    }
   }
 }
