--- a/apps/sistema-demo/src/app/sistema-pages/sistema-buttons/sistema-buttons.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-buttons/sistema-buttons.component.html
@@ -1,7 +1,9 @@
 <pa-demo-page>
   <pa-demo-title>Buttons</pa-demo-title>
 
-  <pa-demo-description>Buttons can contain text, icon or both.</pa-demo-description>
+  <pa-demo-description>
+    <pa-demo-button-description></pa-demo-button-description>
+  </pa-demo-description>
   <pa-demo-examples>
     <h4 class="section-title">Primary</h4>
     <div class="pa-container">
