Fix spacing by removing duplicated scss function from stf

--- a/libs/pastanaga/src/lib/styles/stf.scss
+++ b/libs/pastanaga/src/lib/styles/stf.scss
@@ -1,6 +1,4 @@
-
 @import 'partials/variables';
 @import 'partials/breakpoints';
-@import 'partials/functions';
 @import 'partials/mixins';
-@import "partials/scrollbars";
+@import 'partials/scrollbars';
