--- a/apps/dashboard/src/app/components/stash-navbar/stash-navbar.component.html
+++ b/apps/dashboard/src/app/components/stash-navbar/stash-navbar.component.html
@@ -96,17 +96,18 @@
             <span class="nav-link-title">{{ 'stash.side.widgets' | translate }}</span>
           </a>
         </div>
-        <div *ngIf="isUsersEnabled | async" class="group-items" tourAnchor="step9">
-          <a
-            [routerLink]="kbUrl + '/users'"
-            routerLinkActive="active"
-            class="nav-link"
-            [class.disabled]="!(isAdminOrContrib | async)"
-          >
-            <svg-icon src="assets/icons/manage-users.svg"></svg-icon>
-            <span class="nav-link-title">{{ 'stash.side.users' | translate }}</span>
-          </a>
-        </div>
+        <ng-container *ngIf="isAccountManager | async">
+          <div *ngIf="isUsersEnabled | async" class="group-items" tourAnchor="step9">
+            <a
+              [routerLink]="kbUrl + '/users'"
+              routerLinkActive="active"
+              class="nav-link"
+            >
+              <svg-icon src="assets/icons/manage-users.svg"></svg-icon>
+              <span class="nav-link-title">{{ 'stash.side.users' | translate }}</span>
+            </a>
+          </div>
+        </ng-container>
         <ng-container *ngIf="isAccountManager | async">
           <div *ngIf="isAPIKeysEnabled | async" class="group-items" tourAnchor="step10">
             <a [routerLink]="kbUrl + '/keys'" routerLinkActive="active" class="nav-link">
