--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-users/users-manage/users-manage.component.html
@@ -53,7 +53,7 @@
         selectSize="small"
         (ngModelChange)="changeRole(user.id, $event)"
         [ngModel]="user.role"
-        [disabled]="isItMe(user.id) || !(isAccountManager | async)"
+        [disabled]="!(isAccountManager | async)"
       >
         <ng-container *ngFor="let role of roles">
           <option [value]="role">
@@ -69,7 +69,7 @@
     <td cdk-cell *cdkCellDef="let user">
       <app-button-action
         (click)="deleteUser(user)"
-        *ngIf="!isItMe(user.id) && (isAccountManager | async)"
+        *ngIf="isAccountManager | async"
         action="delete"
         ariaLabel="generic.delete"
       >
