--- a/apps/dashboard/src/app/upload/create-link/create-link.component.html
+++ b/apps/dashboard/src/app/upload/create-link/create-link.component.html
@@ -19,7 +19,7 @@
       <div class="message" *ngIf="message">{{ message | translate }}</div>
     </form>
 
-    <app-label-field [(selected)]="selectedLabels"></app-label-field>
+    <app-label-field [(selection)]="selectedLabels"></app-label-field>
   </div>
 
   <div class="link-actions" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="12px">
