--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
@@ -23,14 +23,14 @@
       <pa-dropdown #dropdown
                    (onOpen)="open[type] = true"
                    (onClose)="open[type] = false">
-        <pa-option class="toggle-all"
-                   *ngIf="labelsets | async as labelsets"
+        <pa-option *ngIf="labelsets | async as labelsets"
                    dontCloseOnSelect>
           <pa-checkbox [value]="selectedLabelsets[type].length === labelsets.length"
                        (change)="toggleAll(type)">
             {{ 'stash.settings.processes.training.all_labelsets' | translate }}
           </pa-checkbox>
         </pa-option>
+        <pa-separator></pa-separator>
         <pa-option *ngFor="let labelset of labelsets | async"
                    dontCloseOnSelect>
           <pa-checkbox [value]="selectedLabelsets[type].includes(labelset.value)"
