--- a/apps/dashboard/src/app/resources/edit/profile/profile.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/profile.component.html
@@ -17,15 +17,25 @@
   </div>
   <div>
     <div>
-      <label>{{ 'resource.thumbnail' | translate }}</label>
+      <label for="radio-group-resource-thumbnail">{{ 'resource.thumbnail' | translate }}</label>
+      <div class="body-xs" *ngIf="(thumbnails | async)?.length > 1">Choose from proposal</div>
+      <!-- TODO: replace the static help above by the proper translation below once uploading is ready. -->
 <!--      <div class="body-xs">{{ 'resource.thumbnail.help' | translate }}</div>-->
     </div>
-    <div>
-      <div *ngFor="let thumb of (thumbnails | async); let index=index">
-        <img class="resource-thumbnail" [src]="thumb" alt="thumbnail {{index}}">
-      </div>
+    <div class="thumbnails-container">
+      <pa-radio-group name="resource-thumbnail"
+                      id="radio-group-resource-thumbnail"
+                      formControlName="thumbnail" >
+        <div *ngFor="let thumb of (thumbnails | async); let index=index; let count=count">
+          <div class="radio-thumbnail-container">
+            <img class="resource-thumbnail" [src]="thumb.blob" alt="thumbnail {{index}}">
+            <pa-radio *ngIf="count > 1" [value]="thumb.uri" [ariaLabel]="'Thumbnail ' + index"></pa-radio>
+          </div>
+        </div>
+      </pa-radio-group>
     </div>
   </div>
+
   <div class="classification-container">
     <label>{{ 'resource.classification' | translate }}</label>
     <div>
